--- a/index.html
+++ b/index.html
@@ -54,6 +54,45 @@
       font-size: 14px;
       margin-bottom: 20px;
     }
+    .why {
+  background: #0F1E2E;
+  color: white;
+  padding: 90px 20px;
+}
+
+.why-container {
+  max-width: 1100px;
+  margin: auto;
+}
+
+.why h2 {
+  font-size: 36px;
+  margin-bottom: 50px;
+  text-align: center;
+}
+
+.why-grid {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(260px, 1fr));
+  gap: 30px;
+}
+
+.why-item {
+  background: rgba(255,255,255,0.06);
+  padding: 30px;
+  border-radius: 14px;
+}
+
+.why-item h3 {
+  margin-bottom: 12px;
+  color: #C9A24D;
+}
+
+.why-item p {
+  color: #E0E0E0;
+  line-height: 1.6;
+}
+
   </style>
 </head>
 <body>
@@ -81,6 +120,57 @@
       Locally Owned • Licensed & Insured • 24/7 Emergency Service
     </p>
   </div>
+<section class="why">
+  <div class="why-container">
+
+    <h2>Why Athens Chooses Precision Plumbing</h2>
+
+    <div class="why-grid">
+
+      <div class="why-item">
+        <h3>We Show Up</h3>
+        <p>
+          When others delay or don’t respond, we answer — even on weekends.
+          Your emergency is our priority.
+        </p>
+      </div>
+
+      <div class="why-item">
+        <h3>We Diagnose Correctly</h3>
+        <p>
+          No guessing. No repeat visits.
+          Just accurate solutions done right the first time.
+        </p>
+      </div>
+
+      <div class="why-item">
+        <h3>We Fix It Fast</h3>
+        <p>
+          Many problems are solved the same day.
+          We respect your time as much as you do.
+        </p>
+      </div>
+
+      <div class="why-item">
+        <h3>We Communicate Clearly</h3>
+        <p>
+          You always know what’s happening and why.
+          No technical jargon, just honest answers.
+        </p>
+      </div>
+
+      <div class="why-item">
+        <h3>We Respect Your Home</h3>
+        <p>
+          Clean work. Professional behavior.
+          No shortcuts — ever.
+        </p>
+      </div>
+
+    </div>
+
+  </div>
+</section>
 
 </body>
 </html>
