--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
     </p>
 
     <div class="buttons">
-      <a href="#" class="call">Call Now for Immediate Service</a>
+      <a href="tel:+17408183941" class="call">Call Now for Immediate Service</a>
       <a href="#" class="callback">Request a Callback</a>
     </div>
 
