--- a/index.html
+++ b/index.html
@@ -112,7 +112,10 @@
 
     <div class="buttons">
       <a href="tel:+17408183941" class="call">Call Now for Immediate Service</a>
-      <a href="#" class="callback">Request a Callback</a>
+      <a href="https://wa.me/17408183941?text=Hello%20I%20would%20like%20to%20request%20a%20callback" class="callback">
+  Request a Callback
+</a>
+
     </div>
 
     <p style="margin-top:40px;">
