--- a/index.html
+++ b/index.html
@@ -92,6 +92,82 @@
   color: #E0E0E0;
   line-height: 1.6;
 }
+/* ===== SERVICES ===== */
+.services {
+  background: #ffffff;
+  color: #0F1E2E;
+  padding: 90px 20px;
+}
+
+.services-container {
+  max-width: 1100px;
+  margin: auto;
+  text-align: center;
+}
+
+.services h2 {
+  font-size: 36px;
+  margin-bottom: 10px;
+}
+
+.services-sub {
+  font-size: 18px;
+  margin-bottom: 50px;
+  color: #555;
+}
+
+.services-grid {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  gap: 30px;
+}
+
+.service-item {
+  background: #F4F6F8;
+  padding: 30px;
+  border-radius: 14px;
+}
+
+.service-item h3 {
+  color: #C9A24D;
+  margin-bottom: 10px;
+}
+
+/* ===== REVIEWS ===== */
+.reviews {
+  background: #0F1E2E;
+  color: white;
+  padding: 90px 20px;
+}
+
+.reviews-container {
+  max-width: 1100px;
+  margin: auto;
+  text-align: center;
+}
+
+.reviews h2 {
+  font-size: 36px;
+  margin-bottom: 50px;
+}
+
+.reviews-grid {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+  gap: 30px;
+}
+
+.review-item {
+  background: rgba(255,255,255,0.06);
+  padding: 30px;
+  border-radius: 14px;
+}
+
+.review-item strong {
+  display: block;
+  margin-top: 15px;
+  color: #C9A24D;
+}
 
   </style>
 </head>
@@ -168,6 +244,75 @@
           Clean work. Professional behavior.
           No shortcuts — ever.
         </p>
+      </div>
+
+    </div>
+
+  </div>
+</section>
+<section class="services">
+  <div class="services-container">
+
+    <h2>Our Plumbing Services</h2>
+    <p class="services-sub">
+      If it involves water, pipes, or pressure — we fix it.
+    </p>
+
+    <div class="services-grid">
+
+      <div class="service-item">
+        <h3>Emergency Plumbing</h3>
+        <p>24/7 response for leaks, clogs, and urgent plumbing issues.</p>
+      </div>
+
+      <div class="service-item">
+        <h3>Water Heaters</h3>
+        <p>Repair and replacement for traditional and tankless systems.</p>
+      </div>
+
+      <div class="service-item">
+        <h3>Drain Cleaning</h3>
+        <p>Fast, effective drain cleaning with no mess left behind.</p>
+      </div>
+
+      <div class="service-item">
+        <h3>Residential Plumbing</h3>
+        <p>Bathrooms, kitchens, leaks, fixtures, and general repairs.</p>
+      </div>
+
+    </div>
+
+  </div>
+</section>
+<section class="reviews">
+  <div class="reviews-container">
+
+    <h2>What Our Customers Say</h2>
+
+    <div class="reviews-grid">
+
+      <div class="review-item">
+        <p>
+          “They showed up after another company did nothing.
+          Diagnosed the issue quickly and fixed it the same day.”
+        </p>
+        <strong>— Tom S.</strong>
+      </div>
+
+      <div class="review-item">
+        <p>
+          “Professional, fast, and honest.
+          Emergency call on a weekend and everything worked again.”
+        </p>
+        <strong>— A.W.</strong>
+      </div>
+
+      <div class="review-item">
+        <p>
+          “Justin did a spectacular job replacing our water heater.
+          Highly recommended.”
+        </p>
+        <strong>— Todd W.</strong>
       </div>
 
     </div>
